<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/wo_selector_updatepwd"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/old_pwd"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_oldPwd"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/tv"
            android:background="@drawable/edit_shape"
            android:paddingLeft="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/wo_selector_updatepwd"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/new_pwd"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_newPwd"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/tv1"
            android:background="@drawable/edit_shape"
            android:paddingLeft="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/wo_selector_updatepwd"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/ok_pwd"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_okPwd"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/tv2"
            android:background="@drawable/edit_shape"
            android:paddingLeft="10dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/w_btn_blue"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>